🐛 [FIX]: Modal heading alignment (#1054)

--- a/packages/react/src/components/Modal/Modal.css
+++ b/packages/react/src/components/Modal/Modal.css
@@ -123,7 +123,9 @@
     text-align: center;
 
     @media (--h-tablet) {
-      text-align: left;
+      &:not([data-contains-image] &) {
+        text-align: left;
+      }
     }
 
     &:not([data-contains-image] &, [data-hide-close-button] &) :where(.h-Heading) {
